--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,16 +21,19 @@
     "@testing-library/jest-dom": "5.16.5",
     "@testing-library/react": "14.0.0",
     "@testing-library/user-event": "14.4.3",
+    "axios": "^1.5.1",
     "chart.js": "3.9.1",
     "chroma-js": "2.4.2",
+    "cors": "^2.8.5",
     "prop-types": "15.8.1",
-    "react": "18.2.0",
+    "react": ">=16.8.0",
     "react-chartjs-2": "3.0.5",
     "react-countup": "6.4.2",
-    "react-dom": "18.2.0",
+    "react-dom": ">=16.8.0",
     "react-flatpickr": "3.10.13",
     "react-router-dom": "6.11.1",
     "react-scripts": "5.0.1",
+    "sequelize": "^6.33.0",
     "stylis": "4.2.0",
     "stylis-plugin-rtl": "2.1.1",
     "uuid": "9.0.0",
