add new response

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,9 @@
 {
     "cSpell.words": [
+        "chartjs",
+        "countup",
         "fullname",
-        "Navbars"
+        "Navbars",
+        "stylis"
     ]
 }
