--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,11 +13,12 @@
   },
   "dependencies": {
     "@emotion/cache": "11.11.0",
-    "@emotion/react": "11.11.0",
-    "@emotion/styled": "11.11.0",
+    "@emotion/react": "^11.11.0",
+    "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "5.11.16",
-    "@mui/material": "5.13.0",
+    "@mui/material": "^5.14.12",
     "@mui/styled-engine": "5.12.3",
+    "@mui/styled-engine-sc": "^5.14.12",
     "@testing-library/jest-dom": "5.16.5",
     "@testing-library/react": "14.0.0",
     "@testing-library/user-event": "14.4.3",
@@ -34,6 +35,7 @@
     "react-router-dom": "6.11.1",
     "react-scripts": "5.0.1",
     "sequelize": "^6.33.0",
+    "styled-components": "^6.0.8",
     "stylis": "4.2.0",
     "stylis-plugin-rtl": "2.1.1",
     "uuid": "9.0.0",
