--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,7 @@
     "cSpell.words": [
         "chartjs",
         "countup",
+        "Eoffice",
         "fullname",
         "Navbars",
         "stylis"
